--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,7 @@ name: Some Programmeur
 description: Just a French Computer Engineering student
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
-
+avatar: https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.topkool.com%2Ffr%2Fwp-content%2Fuploads%2F2013%2F01%2Fyoko-tsuno-055.jpg&f=1&nofb=1
 #
 # Flags below are optional
 #
