--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,10 @@ gems:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
 
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme
+
 # Exclude these files from your production _site
 exclude:
   - Gemfile
